--- a/order-recieved.html
+++ b/order-recieved.html
@@ -56,7 +56,12 @@
                     </div>
                 </div>
             </div>
-        
+         <table border="5px" >
+					<tr><td><img src="images/restaurant-1.jpg"></td>
+						<td><img src="images/meal-1.png"></td>
+						<td><img src="images/meal-special-1.png"></td>
+					</tr>
+          </table>
           <h3>Order Recieved </h3>
          <p>Thank you for your purchase</p>
           
