Update of files

--- a/book-table.html
+++ b/book-table.html
@@ -28,7 +28,7 @@
                         <a href="main-menu.html">Main Menu</a>
                         <a href="starters.html">Starters</a>
                         <a href="specials.html">Specials</a>
-                        <a href="deserts.html">Desert</a>
+                        <a href="desserts.html">Dessert</a>
                         <a href="platters.html">Platters</a>
                     </div>
                 </div>
@@ -63,7 +63,7 @@
            <form>
                 <table>
                 <tr>
-                    <td><h3>Fill out the form below for us to contact you with your query</h3><br/></td>
+                    <td><h3>Fill out the form below for us to book your table</h3><br/></td>
                 </tr>
                                 
                 <tr>
