--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
                         <a href="main-menu.html">Main Menu</a>
                         <a href="starters.html">Starters</a>
                         <a href="specials.html">Specials</a>
-                        <a href="deserts.html">Desert</a>
+                        <a href="desserts.html">Dessert</a>
                         <a href="platters.html">Platters</a>
                     </div>
                 </div>
@@ -62,7 +62,7 @@
 						<td>
                             <h3>Contact US</h3>
                             <p>Phone: 031 555 2222</p>
-                            <p>Email: admin@PineCityMall.com</p>
+                            <p>Email: CustomerCare@AnchorWithMe.com</p>
                             <p>
                                 Address: Excellerate Brand Management (Pty) Ltd.<br/>  
                                 Excellerate on Summit<br/>    
