--- a/meal-1.html
+++ b/meal-1.html
@@ -58,7 +58,7 @@
                         <a href="main-menu.html">Main Menu</a>
                         <a href="starters.html">Starters</a>
                         <a href="specials.html">Specials</a>
-                        <a href="deserts.html">Desert</a>
+                         <a href="desserts.html">Dessert</a>
                         <a href="platters.html">Platters</a>
                     </div>
                 </div>
@@ -107,14 +107,14 @@
                                         </p>
                                        
                                        <p>
-                                           Ingridents:Hake and Chips
+                                           Ingredients:Hake and Chips
                                         </p>
                                    </td>
                                </tr>
                                <tr>
                                    <td>
                                        <h2>Description</h2>
-                                       <p>Grilled or Fried Hake with a porpotion of Chips or Salad</p>
+                                       <p>Grilled or Fried Hake with a portion of Chips or Salad</p>
                                    </td>
                                </tr>
                            </table>
