--- a/meal-2.html
+++ b/meal-2.html
@@ -58,7 +58,7 @@
                         <a href="main-menu.html">Main Menu</a>
                         <a href="starters.html">Starters</a>
                         <a href="specials.html">Specials</a>
-                        <a href="deserts.html">Desert</a>
+                         <a href="desserts.html">Dessert</a>
                         <a href="platters.html">Platters</a>
                     </div>
                 </div>
@@ -107,14 +107,14 @@
                                         </p>
                                        
                                        <p>
-                                           Ingridents:Prawns, Rice, lemons, Herbs, Garlic
+                                           Ingredients:Prawns, Rice, lemons, Herbs, Garlic
                                         </p>
                                    </td>
                                </tr>
                                <tr>
                                    <td>
                                        <h2>Description</h2>
-                                       <p>Fried Prawns with a side of fried rice, a choice of either chili, cheese or tomatoe and either smashed pumkin or spinach cheesy sider</p>
+                                       <p>Fried Prawns with a side of rice, a choice of either chili, cheese or tomatoe sauce and either smashed pumpkin or spinach cheesy sider</p>
                                    </td>
                                </tr>
                            </table>
