--- a/meal-3.html
+++ b/meal-3.html
@@ -58,7 +58,7 @@
                         <a href="main-menu.html">Main Menu</a>
                         <a href="starters.html">Starters</a>
                         <a href="specials.html">Specials</a>
-                        <a href="deserts.html">Desert</a>
+                         <a href="desserts.html">Dessert</a>
                         <a href="platters.html">Platters</a>
                     </div>
                 </div>
@@ -107,7 +107,7 @@
                                         </p>
                                        
                                        <p>
-                                           Ingridents:Prawn & Chorizo Mac & Cheese
+                                           Ingredients:Prawn & Chorizo Mac & Cheese
                                         </p>
                                    </td>
                                </tr>
