--- a/platters-1.html
+++ b/platters-1.html
@@ -107,7 +107,7 @@
                                         </p>
                                        
                                        <p>
-                                           Ingridents:Hake, Chips, Fried Rice, Prawns, mussels
+                                           Ingredients:Hake, Chips, Fried Rice, Prawns, mussels
                                         </p>
                                    </td>
                                </tr>
