--- a/recipe-2.html
+++ b/recipe-2.html
@@ -28,7 +28,7 @@
                         <a href="main-menu.html">Main Menu</a>
                         <a href="starters.html">Starters</a>
                         <a href="specials.html">Specials</a>
-                        <a href="deserts.html">Desert</a>
+                        <a href="desserts.html">Dessert</a>
                         <a href="platters.html">Platters</a>
                     </div>
                 </div>
@@ -79,6 +79,7 @@
                                         </p>
                                        
                                        <p>
+                                           Ingredients:
                                             ½ cup butter<br/>
                                             1 cup white sugar<br/>
                                             2 eggs<br/>
