--- a/recipe-3.html
+++ b/recipe-3.html
@@ -28,7 +28,7 @@
                         <a href="main-menu.html">Main Menu</a>
                         <a href="starters.html">Starters</a>
                         <a href="specials.html">Specials</a>
-                        <a href="deserts.html">Desert</a>
+                         <a href="desserts.html">Dessert</a>
                         <a href="platters.html">Platters</a>
                     </div>
                 </div>
@@ -77,7 +77,7 @@
                                         </p>
                                        
                                        <p>
-                                           Ingridents:<br/>
+                                           Ingredients:<br/>
                                            1/2 cup (120 ml) brewed espresso or very strong coffee, at room temperature<br/>
                                            1/4 cup (60 ml) dry Marsala wine, divided<br/>
                                            2 teaspoons vanilla extract<br/>
