--- a/specials-3.html
+++ b/specials-3.html
@@ -57,7 +57,7 @@
                         <a href="main-menu.html">Main Menu</a>
                         <a href="starters.html">Starters</a>
                         <a href="specials.html">Specials</a>
-                        <a href="deserts.html">Desert</a>
+                         <a href="desserts.html">Dessert</a>
                         <a href="platters.html">Platters</a>
                     </div>
                 </div>
@@ -106,7 +106,7 @@
                                         </p>
                                        
                                        <p>
-                                           Ingridents: Hake, calamari, rice and chips
+                                           Ingredients: Hake, calamari, rice and chips
                                         </p>
                                    </td>
                                </tr>
