--- a/dessert-2.html
+++ b/dessert-2.html
@@ -58,7 +58,7 @@
                         <a href="main-menu.html">Main Menu</a>
                         <a href="starters.html">Starters</a>
                         <a href="specials.html">Specials</a>
-                        <a href="deserts.html">Desert</a>
+                        <a href="desserts.html">Dessert</a>
                         <a href="platters.html">Platters</a>
                     </div>
                 </div>
@@ -107,7 +107,7 @@
                                         </p>
                                        
                                        <p>
-                                           Ingridents: crushed nuts (peanuts, walnuts, pecans, almonds, etc)<br/>dried fruits (dates, blueberries, cranberries, raisins)<br/>
+                                           Ingredients: crushed nuts (peanuts, walnuts, pecans, almonds, etc)<br/>dried fruits (dates, blueberries, cranberries, raisins)<br/>
                                            shredded coconut<br/>
                                            caramel pieces<br/>
                                            diced marshmallows<br/>
