--- a/recipe-1.html
+++ b/recipe-1.html
@@ -28,7 +28,7 @@
                         <a href="main-menu.html">Main Menu</a>
                         <a href="starters.html">Starters</a>
                         <a href="specials.html">Specials</a>
-                        <a href="deserts.html">Desert</a>
+                         <a href="desserts.html">Dessert</a>
                         <a href="platters.html">Platters</a>
                     </div>
                 </div>
@@ -77,7 +77,7 @@
                                         </p>
                                        
                                        <p>
-                                           Ingridents: <br/>
+                                           Ingredients: <br/>
                                             1 packet tennis biscuits
                                             150 grams peppermint chocolate
                                             250 ml cream or orley whip dessert topping
