--- a/starters-3.html
+++ b/starters-3.html
@@ -58,7 +58,7 @@
                         <a href="main-menu.html">Main Menu</a>
                         <a href="starters.html">Starters</a>
                         <a href="specials.html">Specials</a>
-                        <a href="deserts.html">Desert</a>
+                         <a href="desserts.html">Dessert</a>
                         <a href="platters.html">Platters</a>
                     </div>
                 </div>
@@ -105,7 +105,7 @@
                                            Serving amount: For 1 Person
                                         </p>
                                        <p>
-                                           Ingridents:Prawns,Cheese sauce
+                                           Ingredients:Prawns,Cheese sauce
                                         </p>
                                    </td>
                                </tr>
